--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,8 @@
   <!DOCTYPE HTML>
   <html lang="en">
-  <head>  </head>
+  <head> 
+    <link href="./style.css" rel="stylesheet" />
+  </head>
   <body></body>
   </html>
     
