--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,9 @@
   <!DOCTYPE HTML>
   <html lang="en">
   <head> 
-    <link href="./style.css" rel="stylesheet" />
+    <title>Micayla Stern's Portfolio</title>
+    <meta charset="us-ascii"><meta content="width=device-width, initail-scale=1.0" name="viewport">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
   <body></body>
   </html>
