--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,11 @@
   <html lang="en">
   <head> 
     <title>Micayla Stern's Portfolio</title>
+
+    <!-- meta tags -->
     <meta charset="us-ascii"><meta content="width=device-width, initail-scale=1.0" name="viewport">
+
+   <!-- style sheets -->
     <link href="./style.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
