--- a/Index.html
+++ b/Index.html
@@ -12,24 +12,15 @@
   </head>
   <body>
 
-    
-    <section id="home">
-      <!-- Logo Top Left -->
-
-      <!-- Name and Main Image -->
-
-      <!-- Little Comment About UX -->
-
-      <!-- Nav Bar -->
-
-      <!-- Contact Me with Links to Linkton and Email -->
-    </section>
-
 
     <section id="about me">
       <!-- Nav Bar -->
 
-      <!-- About Me Text and Image of self-->
+     <!-- Name and Main Image -->
+
+      <!-- About Me Text -->
+
+     <!-- Contact Me with Links to Linkton and Email -->
 
     </section>
 
