--- a/Index.html
+++ b/Index.html
@@ -56,10 +56,9 @@
 
     <!-- About Me Text -->
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor 
-      in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-      sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+    <p>A little about me: Welcome to my Portfolio! I am a college student at Michigan State University studying Computer Science and Experience Architecture. 
+      I aspire to bring a strong level of accessibility into the work that I create through web design and coding algorithms/apps. I'm an avid videogame 
+      enthusiast. When I am not studying or playing games I love talking with friends and thrifting! </p>
 
     <!-- Contact Me with Links to Linkton and Email -->
 
