--- a/Index.html
+++ b/Index.html
@@ -43,16 +43,24 @@
 
     <!-- Name and Main Image -->
 
-    <div class="container-lg my-5">
-      <div class="row">
-        <div class="col-6">
-          <div class="p-5"> Micayla Stern </div>
-
-        <div class="p-5">
-          image goes here
+    <div class="container">
+      <div class="row py-5">
+        <div class="col-md-6">
+          <h1> Hi, I'm Micayla Stern!</h1>
+          <h3>A little about me:</h3>
+          <p>I am a college student at Michigan State University studying User Experience Design(XA/UX). 
+            <br>
+            <br>
+            I aspire to bring a strong level of accessibility into the work that I create through web design and coding algorithms/apps. 
+            <br>
+            <br>
+            Thrifting, playing video games, and baking have to be my top three favorite things to do outside of work and school, HOWEVER, I'm a firm believer that every experience is a great one if you're spending time with the people you love!</p>
         </div>
-      </div>
-    </div>
+        <div class="col-md-6">
+          <img src="./Placeholder.HEIC" class="img-fluid" alt="A blonde girl in the middle of a field looking into the distance.">
+        </div>
+      </div>    
+     
 
     <!-- About Me Text -->
 
