I created columns for the site, added an image, put in my real content, did a little bit of formatting

--- a/Index.html
+++ b/Index.html
@@ -41,32 +41,25 @@
       </div>
     </nav>
 
-    <!-- Name and Main Image -->
+    <!-- Name, about me, and main image -->
 
     <div class="container">
       <div class="row py-5">
         <div class="col-md-6">
-          <h1> Hi, I'm Micayla Stern!</h1>
-          <h3>A little about me:</h3>
-          <p>I am a college student at Michigan State University studying User Experience Design(XA/UX). 
+          <h1> Hi, I'm Micayla Stern!</h1>  <!-- magilio font -->
+          <h3>A little about me:</h3> <!-- Modern font -->
+          <p>I am a college student at Michigan State University studying User Experience Design(XA/UX).  <!-- Modern font -->
+            I aspire to bring a strong level of accessibility into my work through web design and coding algorithms/apps.
             <br>
             <br>
-            I aspire to bring a strong level of accessibility into the work that I create through web design and coding algorithms/apps. 
-            <br>
-            <br>
-            Thrifting, playing video games, and baking have to be my top three favorite things to do outside of work and school, HOWEVER, I'm a firm believer that every experience is a great one if you're spending time with the people you love!</p>
+            Thrifting, playing video games, and baking have to be my top three favorite things to do outside of work and school. </p>
+            <h6>HOWEVER</h6>
+            <p>I'm a firm believer that almost every experience can be a good one surrounded by the people you love being around.</p> <!-- Modern font -->
         </div>
         <div class="col-md-6">
-          <img src="./Placeholder.HEIC" class="img-fluid" alt="A blonde girl in the middle of a field looking into the distance.">
+          <img src="./selfie.jpg" class="img-fluid" alt="A blonde girl in the middle of a field looking into the distance.">
         </div>
       </div>    
-     
-
-    <!-- About Me Text -->
-
-    <p>A little about me: Welcome to my Portfolio! I am a college student at Michigan State University studying Computer Science and Experience Architecture. 
-      I aspire to bring a strong level of accessibility into the work that I create through web design and coding algorithms/apps. I'm an avid videogame 
-      enthusiast. When I am not studying or playing games I love talking with friends and thrifting! </p>
 
     <!-- Contact Me with Links to Linkton and Email -->
 
