Added Content + Added Comments (Questions for teacher + making the code readable)

--- a/Index.html
+++ b/Index.html
@@ -42,27 +42,59 @@
       </div>
     </nav>
 
-    <!-- Name, about me, and main image -->
+    <!-- Name, mini about me, and main image -->
 
     <div class="container">
       <div class="row py-5">
-        <div class="col-md-6">
-          <h1> Hi, I'm Micayla Stern!</h1>  <!-- magilio font -->
-          <h3>A little about me:</h3> <!-- Modern font -->
-          <p>I am a college student at Michigan State University studying User Experience Design(XA/UX).  <!-- Modern font -->
-            I aspire to bring a strong level of accessibility into my work through web design and coding algorithms/apps.
-            <br>
-            <br>
-            Thrifting, playing video games, and baking have to be my top three favorite things to do outside of work and school. </p>
-            <h6>HOWEVER</h6>
-            <p>I'm a firm believer that almost every experience can be a good one surrounded by the people you love being around.</p> <!-- Modern font -->
+        <div class="col-md-6"> <!-- make center when maximized -->
+          <br>
+          <h1>Hi, I'm Micayla Stern!</h1>  <!-- magilio font -->
+          <br>
+          <h4>I'm a student at Michigan State studying Experience Architecture(XA)</h4> <!-- Modern font -->
+          <br>
+          <h4>I help create meaningful experiences for users.</h4> <!-- Modern font -->
+          <br>
+          <h4>When I'm not studying, you can find me learning music or playing games.</h4> <!-- Modern font -->
+          <br>
+          <h4>Want to work together? I'd love to hear from you!</h4> <!-- Modern font -->
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6"> <!-- make center when minimized-->
           <img src="./realselfie.jpg" class="img-fluid" alt="A blonde girl in the middle of a field looking into the distance.">
         </div>
-      </div>    
+      </div>
+      
+      <!-- big about me -->
 
-    <!-- Contact Me with Links to Linkton and Email -->
+      <h1>About Me!</h1> <!-- align center --> <!-- magilio font -->
+      <div class="container">
+        <div class="row py-5">
+          <div class="col-md-6">
+            <h3>Finding my Calling: </h3> <!-- magilio font -->
+            <p>Prior to knowing what XA/UX was, I thought I was going to be a big shot Architect. <!-- Modern font -->
+              I applied to a few schools out of state with my eyes glued on Georgia Tech. 
+              I quickly realized my heart was telling me to stay close to home so I applied to MSU.</p>
+            <br>
+            <p>I began my time at MSU studying computer science, however, it wasn't for me. <!-- Modern font -->
+              I wanted to have a career that I knew could help individuals in the future.
+              I had discovered XA and fell in love.
+            </p>
+            <!-- add circle image -->
+          </div>
+          <div class="col-md-6">
+            <h3>Today:</h3> <!-- magilio font -->
+            <p>I am studying XA at MSU.  <!-- Modern font -->
+              Since I am a first year student I am still figuring out exactly who I am and what I want to do after getting an education.
+              Acedemics are important to me so I dedicate the majority of my time to my studies.</p>
+            <br>
+              <p>When I'm not studying I enjoy chatting with friends, playing guitar or violin, and playing video games! <!-- Modern font -->
+                Additionally, I love meeting new people and learning about their point of view to broaden my knowledge on different cultures and experiences.</p>
+                <!-- link linkton and link email -->
+          </div>
+        </div>
+      </div>
+            
+
+    <!-- Contact Me with circle image and Links to Linkton and Email -->
 
   </section>
 
