--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,23 @@
     </nav>
 
     <!-- Header -->
-
+    <div class="container py-5">
+      <div class="row" style="text-align: center;"> 
+        <h1>Portfolio</h1> <!-- Font needed, make text bigger -->
+      </div>
+    </div>
+    <div class="container">
+      <div class="row py-5">
+        <div class="col-md-6">
+          <!-- put a relevant image here -->
+          <h4 style="text-align:center">iteachmsu UX Project</h4> <!-- Font needed -->
+        </div>
+        <div class="col-md-6">
+          <!-- put a relevant image here -->
+          <h4 style="text-align:center">Python: Twitter X Facebook 
+            <br>
+            Data Analysis</h4> <!-- Font Needed -->
+        </div>
     <!-- Project 1 Description and Pictures -->
 
     <!-- Project 2 Description and Headers -->
