--- a/portfolio.html
+++ b/portfolio.html
@@ -51,14 +51,12 @@
     <div class="container">
       <div class="row py-5">
         <div class="col-md-6">
-          <!-- put a relevant image here -->
+          <img src="./Michigan_State_Spartans_logo_PNG3.png" class="img-fluid center" alt="Green Spartan Logo">
           <h4 style="text-align:center">iteachmsu UX Project</h4> <!-- Font needed -->
         </div>
         <div class="col-md-6">
-          <!-- put a relevant image here -->
-          <h4 style="text-align:center">Python: Twitter X Facebook 
-            <br>
-            Data Analysis</h4> <!-- Font Needed -->
+          <img src="./PythonLogo.png.url" class="img-fluid center" alt="Green Spartan Logo">
+          <h4 style="text-align:center">Python: Twitter X Facebook <br> Data Analysis</h4> <!-- Font Needed -->
         </div>
     <!-- Project 1 Description and Pictures -->
 
