--- a/portfolio.html
+++ b/portfolio.html
@@ -34,8 +34,8 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="Index.html">About Me</a>
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
+            <a class="nav-link" aria-current="page" href="Index.html">About Me</a>
+            <a class="nav-link active" href="portfolio.html">Portfolio</a>
             <a class="nav-link" href="resume.html">Resume</a>
           </div>
         </div>
@@ -45,17 +45,17 @@
     <!-- Header -->
     <div class="container py-5">
       <div class="row" style="text-align: center;"> 
-        <h1>Portfolio</h1> <!-- Font needed, make text bigger -->
+        <h1><u>Portfolio</u></h1> <!-- Font needed, make text bigger -->
       </div>
     </div>
     <div class="container">
       <div class="row py-5">
         <div class="col-md-6">
-          <img src="./Michigan_State_Spartans_logo_PNG3.png" class="img-fluid center" alt="Green Spartan Logo">
+          <a class="link" href="#"><img src="./Michigan_State_Spartans_logo_PNG3.png" class="msulogo" alt="Green Spartan Logo"></a>
           <h4 style="text-align:center">iteachmsu UX Project</h4> <!-- Font needed -->
         </div>
         <div class="col-md-6">
-          <img src="./PythonLogo.png.url" class="img-fluid center" alt="Green Spartan Logo">
+          <a class="link" href="#"><img src="./PythonLogo.png" class="pythonlogo" alt="A yellow cartoon python and a blue cartoon python wraping around each other."></a>
           <h4 style="text-align:center">Python: Twitter X Facebook <br> Data Analysis</h4> <!-- Font Needed -->
         </div>
     <!-- Project 1 Description and Pictures -->
