--- a/resume.html
+++ b/resume.html
@@ -34,9 +34,9 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="Index.html">About Me</a>
+            <a class="nav-link" aria-current="page" href="Index.html">About Me</a>
             <a class="nav-link" href="portfolio.html">Portfolio</a>
-            <a class="nav-link" href="resume.html">Resume</a>
+            <a class="nav-link active" href="resume.html">Resume</a>
           </div>
         </div>
       </div>
