--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       
       <!-- big about me -->
 
-      <h1>About Me!</h1> <!-- align center --> <!-- magilio font -->
+      <h1 style="text-align: center"><u>About Me!</u></h1> <!-- align center --> <!-- magilio font -->
       <div class="container">
         <div class="row py-5">
           <div class="col-md-6">
