--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
       </div>
     </nav>
 
-    <!-- Header -->
+    <!-- Content -->
     <div class="container py-5">
       <div class="row" style="text-align: center;"> 
         <h1><u>Portfolio</u></h1> <!-- Font needed, make text bigger -->
@@ -51,17 +51,13 @@
     <div class="container">
       <div class="row py-5">
         <div class="col-md-6">
-          <a class="link" href="#"><img src="./Michigan_State_Spartans_logo_PNG3.png" class="msulogo" alt="Green Spartan Logo"></a>
+          <a class="link" href="uxprojectpage.html"><img src="./Michigan_State_Spartans_logo_PNG3.png" class="msulogo" alt="Green Spartan Logo"></a>
           <h4 style="text-align:center">iteachmsu UX Project</h4> <!-- Font needed -->
         </div>
         <div class="col-md-6">
-          <a class="link" href="#"><img src="./PythonLogo.png" class="pythonlogo" alt="A yellow cartoon python and a blue cartoon python wraping around each other."></a>
+          <a class="link" href="pythonpage.html"><img src="./PythonLogo.png" class="pythonlogo" alt="A yellow cartoon python and a blue cartoon python wraping around each other."></a>
           <h4 style="text-align:center">Python: Twitter X Facebook <br> Data Analysis</h4> <!-- Font Needed -->
         </div>
-    <!-- Project 1 Description and Pictures -->
-
-    <!-- Project 2 Description and Headers -->
-
   </section>
 
   
