Formatted Portfolio Pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
         </div>
         <div class="col-md-6">
           <a class="link" href="pythonpage.html"><img src="./PythonLogo.png" class="pythonlogo" alt="A yellow cartoon python and a blue cartoon python wraping around each other."></a>
-          <h4 style="text-align:center">Python: Twitter X Facebook <br> Data Analysis</h4> <!-- Font Needed -->
+          <h4 style="text-align:center">CSE Project: Twitter X Facebook <br> Data Analysis</h4> <!-- Font Needed -->
         </div>
   </section>
 
