--- a/pythonpage.html
+++ b/pythonpage.html
@@ -41,3 +41,41 @@
         </div>
       </div>
     </nav>
+
+    <!-- Header -->
+    <br>
+    <h1 style= "padding-top: 25px;"><center> CSE Project: Twitter X Facebook
+      Data Analysis </center></h1>
+    <br>
+    <hr>
+    <div class="container">
+    <!-- Content -->
+    <h3>Project Goal</h3>
+    <p>content content content</p>
+    <h3>My Approach</h3>
+    <p>content content content</p>
+
+    <!-- Final Product -->
+    <h3>Final Product</h3>
+      <div class="row py-5">
+        <div class="col-md-6">
+          <p>image goes here</p>
+        </div>
+        <div class="col-md-6"> 
+          <p>content content content</p>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row py-5">
+          <div class="col-md-6">
+            <p>image goes here</p>
+          </div>
+          <div class="col-md-6"> 
+            <p>content content content</p>
+          </div>
+        </div>
+
+    <!-- Conclusion -->
+    <h3>Conclusion</h3>
+    <p>content content content</p>
+    </div>
