--- a/uxprojectpage.html
+++ b/uxprojectpage.html
@@ -41,3 +41,42 @@
         </div>
       </div>
     </nav>
+
+    <!-- Header -->
+    <br>
+    <h1 style= "padding-top: 25px;"><center> ITeachMSU UX Design Project </center></h1>
+    <br>
+    <hr>
+    <div class="container">
+    <!-- Content -->
+    <h3>Overview</h3>
+    <p>content content content</p>
+    <h3>Our Goal</h3>
+    <p>content content content</p>
+    <h3>Our Suggestions</h3>
+    <p>content content content</p>
+
+    <!-- Prototype -->
+    <h3>The Prototype</h3>
+      <div class="row py-5">
+        <div class="col-md-6">
+          <p>image goes here</p>
+        </div>
+        <div class="col-md-6"> 
+          <p>content content content</p>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row py-5">
+          <div class="col-md-6">
+            <p>image goes here</p>
+          </div>
+          <div class="col-md-6"> 
+            <p>content content content</p>
+          </div>
+        </div>
+
+    <!-- Conclusion -->
+    <h3>Conclusion</h3>
+    <p>content content content</p>
+    </div>
