--- a/pythonpage.html
+++ b/pythonpage.html
@@ -51,9 +51,19 @@
     <div class="container">
     <!-- Content -->
     <h3>Project Goal</h3>
-    <p>content content content</p>
+    <p>The primary goal of this project was to focus on designing, implementing,
+       and testing a python program using lists and dictionaries, files, sets, 
+       and tuples to solve some network-related problems. I used specific data 
+       structures to extract data from a network of friends. I needed to use 10 
+       functions that were readable and had a direct purpose.
+    </p>
     <h3>My Approach</h3>
-    <p>content content content</p>
+    <p>Python is finding a big problem, breaking it down into smaller problems, 
+      and then breaking those smaller problems into even smaller problems. 
+      I began my code by defining my ten functions. From there, 
+      I would look at what it needs to do and dissect the issue. For example, 
+      I decided functions one and two were to open and read the files given, 
+      three through nine would be dedicated to the seven options given to the user, and function ten would be the main function. </p>
 
     <!-- Final Product -->
     <h3>Final Product</h3>
