--- a/pythonpage.html
+++ b/pythonpage.html
@@ -60,10 +60,10 @@
     <h3>My Approach</h3>
     <p>Python is finding a big problem, breaking it down into smaller problems, 
       and then breaking those smaller problems into even smaller problems. 
-      I began my code by defining my ten functions. From there, 
-      I would look at what it needs to do and dissect the issue. For example, 
-      I decided functions one and two were to open and read the files given, 
-      three through nine would be dedicated to the seven options given to the user, and function ten would be the main function. </p>
+      I began my code by defining my ten functions. From there, I would look at what it needs to do and dissect the issue. 
+      For example, I decided functions one and two were to open and read the files given, 
+      three through nine would be dedicated to the seven options given to the user, and function ten would be the main function. 
+      From there I looked at the requirements for each function and began my code. </p>
 
     <!-- Final Product -->
     <h3>Final Product</h3>
@@ -72,7 +72,9 @@
           <p>image goes here</p>
         </div>
         <div class="col-md-6"> 
-          <p>content content content</p>
+          <p>This is a function from my program called: read_files().
+             Its purpose is to open the files that the user inputs when prompted, then it strips the files, 
+             reads them, closes the files, and creates a nested dictionary that holds the user information from the files. </p>
         </div>
       </div>
       <div class="container">
@@ -81,11 +83,18 @@
             <p>image goes here</p>
           </div>
           <div class="col-md-6"> 
-            <p>content content content</p>
+            <p>This is the menu given after the user inputs the files. 
+              The user can then input their choice and the program spits out the information asked for.</p>
           </div>
         </div>
 
     <!-- Conclusion -->
     <h3>Conclusion</h3>
-    <p>content content content</p>
+    <p>In conclusion, during this project I had to use my problem-solving skills to overcome issues I faced with my code. 
+      I learned the efficiency of nested dictionaries when handling large sums of data. 
+      <br><br>
+      If I were to do the project again, I would change how I found triangle friendship data. 
+      Instead of making it three separate functions, one for X, one for Facebook, and one for both,
+       I feel it would be more efficient to make one function to do all three depending on the users input.
+      </p>
     </div>
