--- a/pythonpage.html
+++ b/pythonpage.html
@@ -69,7 +69,7 @@
     <h3>Final Product</h3>
       <div class="row py-5">
         <div class="col-md-6">
-          <p>image goes here</p>
+          <img src="./RealCodeImage.png" class="img-fluid" alt="Code from read_files() that shows how to open, read, and close a file as well as make a nested dictionary">
         </div>
         <div class="col-md-6"> 
           <p>This is a function from my program called: read_files().
@@ -80,7 +80,7 @@
       <div class="container">
         <div class="row py-5">
           <div class="col-md-6">
-            <img src="./Python Code Image.png" class="img-fluid" alt="Code from read_files() that shows how to open, read, and close a file as well as make a nested dictionary">
+            <!--Image here-->
           </div>
           <div class="col-md-6"> 
             <p>This is the menu given after the user inputs the files. 
