a lot of content

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,18 +45,18 @@
     <!-- Content -->
     <div class="container py-5">
       <div class="row" style="text-align: center;"> 
-        <h1><u>Portfolio</u></h1> <!-- Font needed, make text bigger -->
+        <h1><u style="font-size: 70px;">Portfolio</u></h1> <!-- Font needed, make text bigger -->
       </div>
     </div>
     <div class="container">
       <div class="row py-5">
         <div class="col-md-6">
           <a class="link" href="uxprojectpage.html"><img src="./Michigan_State_Spartans_logo_PNG3.png" class="msulogo" alt="Green Spartan Logo"></a>
-          <h4 style="text-align:center">iteachmsu UX Project</h4> <!-- Font needed -->
+          <h3 style="text-align:center">iteachmsu UX Project</h3> <!-- Font needed -->
         </div>
         <div class="col-md-6">
           <a class="link" href="pythonpage.html"><img src="./PythonLogo.png" class="pythonlogo" alt="A yellow cartoon python and a blue cartoon python wraping around each other."></a>
-          <h4 style="text-align:center">CSE Project: Twitter X Facebook <br> Data Analysis</h4> <!-- Font Needed -->
+          <h3 style="text-align:center">CSE Project: Twitter X Facebook <br> Data Analysis</h3> <!-- Font Needed -->
         </div>
   </section>
 
