--- a/pythonpage.html
+++ b/pythonpage.html
@@ -44,7 +44,7 @@
 
     <!-- Header -->
     <br>
-    <h1 style= "padding-top: 25px;"><center> CSE Project: Twitter X Facebook
+    <h1 style= "padding-top: 25px; font-size: 55px;" ><center> Twitter X Facebook
       Data Analysis </center></h1>
     <br>
     <hr>
