--- a/uxprojectpage.html
+++ b/uxprojectpage.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
   
  <!-- style sheets -->
-  <link href="./style.css" rel="stylesheet" />
+  <link href="./style.css" rel="stylesheet"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body style="background-color:#FFFBDE">
@@ -44,17 +44,31 @@
 
     <!-- Header -->
     <br>
-    <h1 style= "padding-top: 25px;"><center> ITeachMSU UX Design Project </center></h1>
+    <h1 style= "padding-top: 25px; font-size: 55px;"><center> ITeachMSU UX Design Project </center></h1>
     <br>
     <hr>
     <div class="container">
     <!-- Content -->
     <h3>Overview</h3>
-    <p>content content content</p>
+    <p>In my intro to XA class, we had the opportunity to work with the teaching center, helping them improve the usability and overall design of their website.
+       My three group members and I did a competitor analysis of the site by analyzing sites used by other schools, 
+       as well as set up a google form to get user opinions to see what the users wanted changed or more accessible.
+        Our wireframes were then compressed into a UX proposal in the form of a presentation given to the teaching center.</p>
     <h3>Our Goal</h3>
-    <p>content content content</p>
+    <p>We met with the iteach representatives where they told us their concerns about design.content content content</p>
+    <ul>
+      <li>The homepage is cluttered</li>
+      <li>The calendar page is incohesive</li>
+      <li>The website feels like it is trying to be something it isn't</li>
+    </ul>
+    <p>As a team we wanted to focus on these design issues as well as look at how we could condense the content on the site. 
+      For the presentation, we focused on showing WHY we did what we did by providing examples from the research we conducted in the beginning. </p>
     <h3>Our Suggestions</h3>
-    <p>content content content</p>
+    <ol>
+      <li>Allow the homepage to explain the sites purpose and goals</li>
+      <li>Merge the feed page and browse page into one organized page</li>
+      <li>Make he calendar page more readable for users</li>
+    </ol>>
 
     <!-- Prototype -->
     <h3>The Prototype</h3>
