more content and formatting

--- a/pythonpage.html
+++ b/pythonpage.html
@@ -50,14 +50,14 @@
     <hr>
     <div class="container">
     <!-- Content -->
-    <h3>Project Goal</h3>
+    <h3 style="font-size: 40px;">Project Goal</h3>
     <p>The primary goal of this project was to focus on designing, implementing,
        and testing a python program using lists and dictionaries, files, sets, 
        and tuples to solve some network-related problems. I used specific data 
        structures to extract data from a network of friends. I needed to use 10 
        functions that were readable and had a direct purpose.
     </p>
-    <h3>My Approach</h3>
+    <h3 style="font-size: 40px;">My Approach</h3>
     <p>Python is finding a big problem, breaking it down into smaller problems, 
       and then breaking those smaller problems into even smaller problems. 
       I began my code by defining my ten functions. From there, I would look at what it needs to do and dissect the issue. 
@@ -66,15 +66,15 @@
       From there I looked at the requirements for each function and began my code. </p>
 
     <!-- Final Product -->
-    <h3>Final Product</h3>
+    <h3 style="font-size: 40px;">Final Product</h3>
       <div class="row py-5">
         <div class="col-md-6">
-          <img src="./RealCodeImage.png" width="600px" class="img-fluid" alt="Code from read_files() that shows how to open, read, and close a file as well as make a nested dictionary">
+          <img src="./RealCodeImage.png" width="600px" class="img-fluid" alt="Code from read_files() that shows how to open, read, and close a file as well as make a nested dictionary" style="padding-left: 10px;">
         </div>
         <div class="col-md-6"> 
-          <p>This is a function from my program called: read_files().
+          <p style="padding-top: 110px;"><center>This is a function from my program called: read_files().
              Its purpose is to open the files that the user inputs when prompted, then it strips the files, 
-             reads them, closes the files, and creates a nested dictionary that holds the user information from the files. </p>
+             reads them, closes the files, and creates a nested dictionary that holds the user information from the files. </center></p>
         </div>
       </div>
       <div class="container">
@@ -83,13 +83,13 @@
             <img src="./pythonmenuimage.png" width="600px" class="img-fluid" alt="imported menu with seven options">
           </div>
           <div class="col-md-6"> 
-            <p>This is the menu given after the user inputs the files. 
-              The user can then input their choice and the program spits out the information asked for.</p>
+            <p style="padding-top: 80px;"><center>This is the menu given after the user inputs the files. 
+              The user can then input their choice and the program spits out the information asked for.</center></p>
           </div>
         </div>
 
     <!-- Conclusion -->
-    <h3>Conclusion</h3>
+    <h3 style="font-size: 40px;">Conclusion</h3>
     <p>In conclusion, during this project I had to use my problem-solving skills to overcome issues I faced with my code. 
       I learned the efficiency of nested dictionaries when handling large sums of data. 
       <br><br>
