--- a/pythonpage.html
+++ b/pythonpage.html
@@ -10,6 +10,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Shrikhand&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Slab:wght@100..900&family=Shrikhand&display=swap" rel="stylesheet">
   
  <!-- style sheets -->
   <link href="./style.css" rel="stylesheet" />
@@ -51,19 +57,23 @@
     <div class="container">
     <!-- Content -->
     <h3 style="font-size: 40px;">Project Goal</h3>
+    <br>
     <p>The primary goal of this project was to focus on designing, implementing,
        and testing a python program using lists and dictionaries, files, sets, 
        and tuples to solve some network-related problems. I used specific data 
        structures to extract data from a network of friends. I needed to use 10 
        functions that were readable and had a direct purpose.
     </p>
+    <br>
     <h3 style="font-size: 40px;">My Approach</h3>
+    <br>
     <p>Python is finding a big problem, breaking it down into smaller problems, 
       and then breaking those smaller problems into even smaller problems. 
       I began my code by defining my ten functions. From there, I would look at what it needs to do and dissect the issue. 
       For example, I decided functions one and two were to open and read the files given, 
       three through nine would be dedicated to the seven options given to the user, and function ten would be the main function. 
       From there I looked at the requirements for each function and began my code. </p>
+      <br>
 
     <!-- Final Product -->
     <h3 style="font-size: 40px;">Final Product</h3>
@@ -89,7 +99,9 @@
         </div>
 
     <!-- Conclusion -->
+    <br>
     <h3 style="font-size: 40px;">Conclusion</h3>
+    <br>
     <p>In conclusion, during this project I had to use my problem-solving skills to overcome issues I faced with my code. 
       I learned the efficiency of nested dictionaries when handling large sums of data. 
       <br><br>
