--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Slab:wght@100..900&family=Shrikhand&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Shrikhand&display=swap" rel="stylesheet">
 
   <!-- style sheets -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link href="./style.css" rel="stylesheet" />
+  
 </head>
 <body style="background-color:#FFFBDE">
 
@@ -45,7 +52,7 @@
 
     <div class="container">
       <div class="row py-5">
-        <div class="col-md-6"> <!-- make center when maximized -->
+        <div class="col-md-6" style="padding-top: 85px;"> <!-- make center when maximized -->
           <br>
           <h3>Hi, I'm Micayla Stern!</h3>  <!-- magilio font -->
           <br>
