--- a/uxprojectpage.html
+++ b/uxprojectpage.html
@@ -10,6 +10,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Shrikhand&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Slab:wght@100..900&family=Shrikhand&display=swap" rel="stylesheet">
   
  <!-- style sheets -->
   <link href="./style.css" rel="stylesheet"/>
@@ -50,11 +56,14 @@
     <div class="container">
     <!-- Content -->
     <h3 style="font-size: 40px;">Overview</h3>
+    <br>
     <p>In my intro to XA class, we had the opportunity to work with the teaching center, helping them improve the usability and overall design of their website.
        My three group members and I did a competitor analysis of the site by analyzing sites used by other schools, 
        as well as set up a google form to get user opinions to see what the users wanted changed or more accessible.
         Our wireframes were then compressed into a UX proposal in the form of a presentation given to the teaching center.</p>
+        <br>
     <h3 style="font-size: 40px;">Our Goal</h3>
+    <br>
     <p>We met with the iteach representatives where they told us their concerns about design.content content content</p>
     <ul>
       <li>The homepage is cluttered</li>
@@ -63,7 +72,9 @@
     </ul>
     <p>As a team we wanted to focus on these design issues as well as look at how we could condense the content on the site. 
       For the presentation, we focused on showing WHY we did what we did by providing examples from the research we conducted in the beginning. </p>
+      <br>
     <h3 style="font-size: 40px;">Our Suggestions</h3>
+    <br>
     <ol>
       <li>Allow the homepage to explain the sites purpose and goals</li>
       <li>Merge the feed page and browse page into one organized page</li>
@@ -71,6 +82,7 @@
     </ol>>
 
     <!-- Prototype -->
+    <br>
     <h3 style="font-size: 40px;">The Prototype</h3>
       <div class="row py-5">
         <div class="col-md-6">
@@ -91,6 +103,8 @@
         </div>
 
     <!-- Conclusion -->
+    <br>
     <h3 style="font-size: 40px;">Conclusion</h3>
+    <br>
     <p>content content content</p>
     </div>
